updated bul write
